# splitter

./: .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: bazel.yml  go.yml  lint.yml
cmd/splitter/: BUILD.bazel  main.go
cmd/splitter/cmd/: BUILD.bazel  root.go  start.go  util.go
cmd/splitterctl/: BUILD.bazel  main.go
cmd/splitterctl/cmd/: BUILD.bazel  domains.go  join.go  operations.go  placement.go  placements.go  raft.go  root.go  services.go  tenants.go  util.go
docs/: guide.md  sharding.md
helm/splitter/: Chart.yaml  README-kind.md  README.md  values.yaml
helm/splitter/templates/: NOTES.txt  _helpers.tpl  headless-service.yaml  service.yaml  statefulset.yaml
infra/platform/wds2/pkg/util/p2quantile/: BUILD
lib/service/location/: BUILD.bazel  instance.go  location.go
lib/service/location/pb/: location.pb.go
lib/service/session/: BUILD.bazel  client.go  client_test.go  lease.go  metrics.go  server.go  server_test.go  session.go  stream.go  stream_test.go
lib/service/session/pb/: session.pb.go
pb/: cluster.pb.go  consumer.pb.go  consumerapi.pb.go  consumerapi_grpc.pb.go  management.pb.go  managementapi.pb.go  managementapi_grpc.pb.go  model.pb.go  placement.pb.go  placementapi.pb.go  placementapi_grpc.pb.go
pb/private/: cluster.pb.go  cluster_grpc.pb.go  coordinator.pb.go  coordinator_grpc.pb.go  leader.pb.go  leader_grpc.pb.go  load.pb.go  observer.pb.go  observer_grpc.pb.go  operation.pb.go  operation_grpc.pb.go  placement.pb.go  placement_grpc.pb.go  state.pb.go
pkg/allocation/: BUILD.bazel  action.go  allocation.go  allocation_test.go  grant.go  rule.go  work.go  worker.go
pkg/cluster/: BUILD.bazel  cluster.go  leader.go
pkg/core/: BUILD.bazel  client.go  cluster.go  consumer.go  context.go  grant.go  load.go  message.go  metrics.go  observer.go  placement.go  placement_test.go  proxy.go  raft.go  resolver.go  storage.go  worker.go
pkg/core/distribution/: distribution.go
pkg/model/: BUILD.bazel  client.go  client_test.go  cluster.go  cluster_test.go  consumer.go  consumer_test.go  dispatcher.go  dispatcher_test.go  domain.go  domain_test.go  errors.go  grant.go  instance.go  messages.go  metrics.go  operational.go  operational_test.go  placement.go  pool.go  pool_test.go  proxy.go  proxy_test.go  region.go  region_test.go  service.go  sharding.go  sharding_test.go  tenant.go  workpool.go  workpool_test.go
pkg/server/: BUILD.bazel  server.go
pkg/service/consumer/: BUILD.bazel  consumer.go
pkg/service/coordinator/: BUILD.bazel  allocation.go  allocation_test.go  consumer.go  coordinator.go  coordinator_test.go  messages.go  observer.go  shards.go  tracking.go  tracking_test.go
pkg/service/frontend/: BUILD.bazel  cluster.go  consumer.go  coordinator.go  leader.go  management.go  observer.go  operation.go  placement.go  raft.go
pkg/service/leader/: BUILD.bazel  allocation.go  allocation_test.go  grant.go  leader.go  leader_test.go  manager.go  manager_test.go  messages.go  proxy.go  worker.go  writer.go
pkg/service/worker/: BUILD.bazel  grant.go  lease.go  messages.go  worker.go  worker_test.go
pkg/storage/: BUILD.bazel  cache.go  cache_test.go  management.go  mutation.go  placement.go  state.go  storage.go
pkg/storage/memdb/: memdb.go
pkg/storage/memory/: BUILD.bazel  memory.go
pkg/storage/raft/: BUILD.bazel  fsm.go  fsm_test.go  raft.go
pkg/storage/raftstorage/: fsm.go  raft.go
pkg/testing/leader/: BUILD.bazel  local.go
pkg/testing/model/: BUILD.bazel  ownership.go
pkg/util/: util.go
pkg/util/hclog/: BUILD.bazel  hclog.go
pkg/util/p2quantile/: BUILD.bazel  p2quantile.go  p2quantile_test.go
pkg/util/raftx/: transport.go
pkg/util/sessionx/: BUILD.bazel  connection.go
pkg/util/txnx/: txn.go
pkg/util/uuidx/: BUILD.bazel  range.go  range_test.go
proto/atoms/splitter/: BUILD.bazel  cluster.proto  consumer.proto  consumerapi.proto  management.proto  managementapi.proto  model.proto  placement.proto  placementapi.proto  tenantapi.proto
proto/atoms/splitter/lib/service/location/: BUILD.bazel  location.proto
proto/atoms/splitter/lib/service/session/: BUILD.bazel  session.proto
proto/atoms/splitter/private/: BUILD.bazel  cluster.proto  coordinator.proto  info.proto  leader.proto  load.proto  observer.proto  operation.proto  placement.proto  raft.proto  state.proto
testing/prefab/: BUILD.bazel  consumer.go
testing/testcases/cluster/: BUILD.bazel  empty-cluster-with-shards.yaml  empty.yaml  lookup.yaml
testing/testcases/cluster/change/: activate-after-reconnect.yaml  assign-new-grant-to-remove-retained-grant.yaml  assign-new-grant-with-keeping-retained-grant.yaml  assign-new-grants.yaml  invalid-assignment.yaml  invalid-remove.yaml  invalid-unassign.yaml  invalid-update.yaml  new-grant-removes-old-grant.yaml  remove-consumer-with-retained-grants.yaml  remove-existing-consumer.yaml  unassign-and-assign.yaml  unassign-existing-grant.yaml  unassign-retained-grant.yaml  update-existing-grant.yaml  update-retained-grant.yaml
testing/testcases/cluster/snapshot/: cluster-and-empty-snapshot.yaml  cluster-and-snapshot-with-assignments.yaml  cluster-and-snapshot-with-shards.yaml  cluster-and-snapshot.yaml  cluster-with-allocated-and-revoked-and-empty-snapshot.yaml  cluster-with-allocated-and-revoked-and-snapshot-with-active.yaml  cluster-with-allocated-and-revoked-and-snapshot-with-allocated.yaml  cluster-with-allocated-and-revoked-and-snapshot-with-new-grants.yaml  cluster-with-allocated-and-revoked-and-snapshot-with-revoked.yaml  empty-cluster-and-empty-snapshot.yaml  empty-cluster-and-snapshot-with-assignments.yaml  empty-cluster-and-snapshot-with-shards.yaml  empty-cluster-and-snapshot.yaml  invalid-snapshot.yaml  snapshot-overwrites-grant.yaml
tools/: update-go-protos.sh
