load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "mutate", "tar")

tar(
    name = "splitter_layer",
    srcs = ["//cmd/splitter"],
    out = "splitter_layer.tar",
    mutate = mutate(
        package_dir = "/usr/local/bin",
        strip_prefix = "cmd/splitter/splitter_/splitter.runfiles/_main/cmd/splitter/splitter_",
    ),
)

tar(
    name = "splitterctl_layer",
    srcs = ["//cmd/splitterctl"],
    out = "splitterctl_layer.tar",
    mutate = mutate(
        package_dir = "/usr/local/bin",
        strip_prefix = "cmd/splitterctl/splitterctl_/splitterctl.runfiles/_main/cmd/splitterctl/splitterctl_",
    ),
)

oci_image(
    name = "image",
    base = "@golang_1_26_2",
    labels = {
        "org.opencontainers.image.source": "https://github.com/atoms-co/splitter",
    },
    tars = [
        ":splitter_layer",
        ":splitterctl_layer",
    ],
)

platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

oci_load(
    name = "load",
    image = ":transitioned_image",
    repo_tags = ["atoms.co/splitter:latest"],
)
