bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "tar.bzl", version = "0.7.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    experiments = [
        "synctest",
    ],
    go_mod = "//:go.mod",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "co_atoms_go_lib",
    "co_atoms_go_slicex",
    "com_github_golang_protobuf",
    "com_github_google_uuid",
    "com_github_hashicorp_go_hclog",
    "com_github_hashicorp_raft",
    "com_github_hashicorp_raft_boltdb_v2",
    "com_github_jille_grpc_multi_resolver",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_uber_go_multierr",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "golang_1_24_12",
    digest = "sha256:8b788ecf5fddb91cd04e532205d6411de68a08b510885bb8fb1c93f54c03f737",
    image = "golang:1.24.9",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "golang_1_24_12",
    "golang_1_24_12_linux_amd64",
    "golang_1_24_12_linux_arm64_v8",
)
