load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "splitterctl_lib",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/cmd/splitterctl",
    visibility = ["//visibility:private"],
    deps = ["//cmd/splitterctl/cmd"],
)

go_binary(
    name = "splitterctl",
    embed = [":splitterctl_lib"],
    visibility = ["//visibility:public"],
)
