load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "allocation",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/allocation",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "@co_atoms_go_lib//container",
        "@co_atoms_go_lib//mapx",
        "@co_atoms_go_lib//mathx",
        "@co_atoms_go_slicex//:slicex",
    ],
)

go_test(
    name = "allocation_test",
    srcs = glob(["*_test.go"]),
    deps = [
        ":allocation",
        "//lib/service/location",
        "@co_atoms_go_lib//mapx",
        "@co_atoms_go_lib//testing/assertx",
        "@co_atoms_go_lib//testing/requirex",
        "@co_atoms_go_lib//testing/synctestx",
        "@co_atoms_go_slicex//:slicex",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
