load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/model",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "//lib/service/session",
        "//pkg/allocation",
        "//pkg/util/uuidx",
        "//proto/atoms/splitter",
        "@co_atoms_go_lib//backoffx",
        "@co_atoms_go_lib//chanx",
        "@co_atoms_go_lib//contextx",
        "@co_atoms_go_lib//encoding/protox",
        "@co_atoms_go_lib//iox",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//mapx",
        "@co_atoms_go_lib//metrics",
        "@co_atoms_go_lib//net/grpcx",
        "@co_atoms_go_lib//randx",
        "@co_atoms_go_lib//stringx",
        "@co_atoms_go_lib//syncx",
        "@co_atoms_go_lib//timex",
        "@co_atoms_go_lib//uuidx",
        "@co_atoms_go_slicex//:slicex",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "model_test",
    srcs = glob(["*_test.go"]),
    data = [
        "//testing/testcases/cluster",
    ],
    env = {
        "BAZEL": "true",
    },
    rundir = ".",
    deps = [
        ":model",
        "//lib/service/location",
        "//proto/atoms/splitter",
        "//testing/prefab",
        "@co_atoms_go_lib//chanx",
        "@co_atoms_go_lib//iox",
        "@co_atoms_go_lib//net/grpcx",
        "@co_atoms_go_lib//testing/assertx",
        "@co_atoms_go_lib//testing/requirex",
        "@co_atoms_go_lib//testing/synctestx",
        "@co_atoms_go_lib//uuidx",
        "@co_atoms_go_slicex//:slicex",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
