load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "//lib/service/session",
        "//pkg/cluster",
        "//pkg/core",
        "//pkg/model",
        "//pkg/service/consumer",
        "//pkg/service/coordinator",
        "//pkg/service/frontend",
        "//pkg/service/leader",
        "//pkg/service/worker",
        "//proto/atoms/splitter",
        "//proto/atoms/splitter/private",
        "@co_atoms_go_lib//chanx",
        "@co_atoms_go_lib//contextx",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//net/grpcx",
        "@co_atoms_go_lib//statshandlerx",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_multierr//:multierr",
    ],
)
