load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/core",
        "//pkg/model",
        "@co_atoms_go_lib//mapx",
    ],
)

go_test(
    name = "storage_test",
    srcs = glob(["*_test.go"]),
    embed = [":storage"],
    deps = [
        "//pkg/core",
        "//pkg/model",
        "@com_github_stretchr_testify//require",
    ],
)
