load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/cmd/splitter/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "//pkg/cluster",
        "//pkg/server",
        "//pkg/service/leader",
        "//pkg/storage/raft",
        "//pkg/util/hclog",
        "@co_atoms_go_lib//contextx",
        "@co_atoms_go_lib//iox",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//service/logx",
        "@co_atoms_go_lib//service/metricsx",
        "@co_atoms_go_lib//service/pprofx",
        "@co_atoms_go_lib//signalx",
        "@com_github_hashicorp_raft//:raft",
        "@com_github_hashicorp_raft_boltdb_v2//:raft-boltdb",
        "@com_github_spf13_cobra//:cobra",
    ],
)
