load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "location",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/lib/service/location",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter/lib/service/location",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
