load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "session",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/lib/service/session",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "//proto/atoms/splitter/lib/service/session",
        "@co_atoms_go_lib//chanx",
        "@co_atoms_go_lib//iox",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//metrics",
        "@com_github_golang_protobuf//proto",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "session_test",
    srcs = [
        "client_test.go",
        "server_test.go",
        "stream_test.go",
    ],
    deps = [
        ":session",
        "//lib/service/location",
        "@co_atoms_go_lib//testing/assertx",
        "@co_atoms_go_lib//testing/requirex",
        "@co_atoms_go_lib//testing/synctestx",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
