load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coordinator",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/service/coordinator",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "//lib/service/session",
        "//pkg/allocation",
        "//pkg/core",
        "//pkg/model",
        "//pkg/storage",
        "//pkg/util/sessionx",
        "//pkg/util/uuidx",
        "//proto/atoms/splitter",
        "//proto/atoms/splitter/private",
        "@co_atoms_go_lib//chanx",
        "@co_atoms_go_lib//contextx",
        "@co_atoms_go_lib//encoding/protox",
        "@co_atoms_go_lib//iox",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//mapx",
        "@co_atoms_go_lib//mathx",
        "@co_atoms_go_lib//metrics",
        "@co_atoms_go_lib//randx",
        "@co_atoms_go_lib//stringx",
        "@co_atoms_go_lib//syncx",
        "@co_atoms_go_lib//uuidx",
        "@co_atoms_go_slicex//:slicex",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "coordinator_test",
    srcs = glob(["*_test.go"]),
    embed = [":coordinator"],
    deps = [
        "//lib/service/location",
        "//lib/service/session",
        "//pkg/allocation",
        "//pkg/core",
        "//pkg/model",
        "//proto/atoms/splitter",
        "//proto/atoms/splitter/private",
        "//testing/prefab",
        "@co_atoms_go_lib//testing/assertx",
        "@co_atoms_go_lib//uuidx",
        "@co_atoms_go_slicex//:slicex",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
