load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "frontend",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/service/frontend",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/location",
        "//lib/service/session",
        "//pkg/cluster",
        "//pkg/core",
        "//pkg/model",
        "//pkg/service/consumer",
        "//pkg/service/coordinator",
        "//pkg/service/leader",
        "//pkg/service/worker",
        "//proto/atoms/splitter",
        "//proto/atoms/splitter/private",
        "@co_atoms_go_iox//:iox",
        "@co_atoms_go_lib//chanx",
        "@co_atoms_go_lib//contextx",
        "@co_atoms_go_lib//encoding/protox",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//net/grpcx",
        "@co_atoms_go_slicex//:slicex",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
