load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "raft",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/storage/raft",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/core",
        "//pkg/model",
        "//pkg/storage",
        "//proto/atoms/splitter/private:private_go_proto",
        "@co_atoms_go_lib//encoding/protox",
        "@co_atoms_go_lib//log",
        "@co_atoms_go_lib//metrics",
        "@com_github_hashicorp_raft//:raft",
    ],
)

go_test(
    name = "raft_test",
    srcs = glob(["*_test.go"]),
    embed = [":raft"],
    deps = [
        "//pkg/core",
        "//pkg/model",
        "//proto/atoms/splitter/private:private_go_proto",
        "//testing/prefab",
        "@co_atoms_go_lib//encoding/protox",
        "@com_github_hashicorp_raft//:raft",
        "@com_github_stretchr_testify//require",
    ],
)
