load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "leader",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/testing/leader",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/service/session",
        "//pkg/model",
        "//pkg/service/leader",
        "//proto/atoms/splitter/private",
        "@co_atoms_go_lib//iox",
    ],
)
