load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/testing/model",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model",
        "@co_atoms_go_iox//:iox",
    ],
)
