load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "p2quantile",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "go.atoms.co/splitter/pkg/util/p2quantile",
    visibility = ["//visibility:public"],
)

go_test(
    name = "p2quantile_test",
    srcs = glob(["*_test.go"]),
    embed = [":p2quantile"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
