load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "splitter_proto",
    srcs = [
        "cluster.proto",
        "consumer.proto",
        "consumerapi.proto",
        "management.proto",
        "managementapi.proto",
        "model.proto",
        "placement.proto",
        "placementapi.proto",
    ],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter/lib/service/location:location_proto",
        "//proto/atoms/splitter/lib/service/session:session_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "splitter_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "go.atoms.co/splitter/pb",
    proto = ":splitter_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter/lib/service/location:location_go_proto",
        "//proto/atoms/splitter/lib/service/session:session_go_proto",
    ],
)
