load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "private_proto",
    srcs = glob(["*.proto"]),
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter:splitter_proto",
        "//proto/atoms/splitter/lib/service/location:location_proto",
        "//proto/atoms/splitter/lib/service/session:session_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "private_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "go.atoms.co/splitter/pb/private",
    proto = ":private_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter",
        "//proto/atoms/splitter/lib/service/location",
        "//proto/atoms/splitter/lib/service/session",
    ],
)

go_library(
    name = "private",
    embed = [":private_go_proto"],
    importpath = "go.atoms.co/splitter/pb/private",
    visibility = ["//visibility:public"],
)
