load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "private_proto",
    srcs = [
        "cluster.proto",
        "coordinator.proto",
        "leader.proto",
        "load.proto",
        "observer.proto",
        "operation.proto",
        "placement.proto",
        "state.proto",
    ],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter:splitter_proto",
        "//proto/atoms/splitter/lib/service/location:location_proto",
        "//proto/atoms/splitter/lib/service/session:session_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "private_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "go.atoms.co/splitter/pb/private",
    proto = ":private_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/atoms/splitter:splitter_go_proto",
        "//proto/atoms/splitter/lib/service/location:location_go_proto",
        "//proto/atoms/splitter/lib/service/session:session_go_proto",
    ],
)
